# Django_and_DRF

./: .gitignore  pyproject.toml
todo_project/authapp/: models.py  serializers.py  views.py
todo_project/authapp/migrations/: 0001_initial.py
todo_project/config_todo/: asgi.py  settings.py  urls.py  wsgi.py
todo_project/frontend/: package-lock.json
todo_project/frontend/src/: App.js
todo_project/frontend/src/components/: Footer.js  Menu.js  Users.js
