[tool.poetry]
name = "tutorials"
version = "0.1.0"
description = ""
authors = ["Willy Wonka <Woodenehad9798740@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2"
djangorestframework = "^3.14.0"
pytest-django = "^4.5.2"
pytest = "^7.2.0"
python-dotenv = "^0.21.0"
black = "^22.10.0"
psycopg2 = "^2.9.5"
psycopg2-binary = "^2.9.5"
markdown = "^3.4.1"
django-filter = "^22.1"


[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
